objects/CSC_Exception_Audit_Trail__c.object
<CustomObject>
    <description>CloudSmiths - RN
The object stores all Apex handled exceptions if the developer explicitly handles and logs exceptions within his code.</description>
    <fields>
        <fullName>Case_Record_ID__c</fullName>
        <description>RN - CloudSmiths
The record ID of the Case that generated the exception. Only if available at the time of the exception</description>
        <label>Case Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Name__c</fullName>
        <label>Class Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Developer_Notes__c</fullName>
        <label>Developer Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Exception_DateTime__c</fullName>
        <label>Exception DateTime</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Exception_Message__c</fullName>
        <label>Exception Message</label>
        <length>131000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <inlineHelpText>LIne number in the code where the exception occured</inlineHelpText>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_Name__c</fullName>
        <label>Method Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Info</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Investigating</fullName>
                </value>
                <value>
                    <fullName>Resolution Pending</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Ignore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CSC Exception Audit Trail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Severity__c</columns>
        <columns>Class_Name__c</columns>
        <columns>Method_Name__c</columns>
        <columns>Exception_Message__c</columns>
        <columns>Exception_DateTime__c</columns>
        <columns>Developer_Notes__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Error_View</fullName>
        <columns>Severity__c</columns>
        <columns>NAME</columns>
        <columns>Class_Name__c</columns>
        <columns>Method_Name__c</columns>
        <columns>Exception_Message__c</columns>
        <columns>Line_Number__c</columns>
        <columns>Exception_DateTime__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Severity__c</field>
            <operation>equals</operation>
            <value>Error,Failure</value>
        </filters>
        <label>Error View</label>
    </listViews>
    <nameField>
        <displayFormat>AUDITLOG{0000000}</displayFormat>
        <label>CSC Error Logging Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CSC Exception Audit Trail</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>